--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                     <i class="fa-solid fa-quran"></i>
                 </div>
                 <h3 data-i18n="dailyInfoTitle">Günün Ayeti</h3>
+                 <p class="share-note">Sevdiklerinizle paylaşın...</p>
             </div>
 
             <blockquote class="verse-text" id="infoText">
@@ -245,5 +246,6 @@
     </footer>
     <script src="script.js"></script>
 </body>
+
 
 </html>
