--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
 
     <nav>
         <div class="nav-logo">
-            <i class="fa-solid fa-mosque"></i> Namaz Vakti Pro
+            <svg class="diyanet-logo-svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                <path d="M50 10 C25 10 10 30 10 55 C10 80 50 90 50 90 C50 90 90 80 90 55 C90 30 75 10 50 10 Z"
+                    fill="none" stroke="white" stroke-width="2" />
+                <path d="M35 55 L35 75 M45 50 L45 80 M55 50 L55 80 M65 55 L65 75" stroke="white" stroke-width="3"
+                    stroke-linecap="round" />
+                <path d="M50 20 L50 40 M40 30 L60 30" stroke="white" stroke-width="2" />
+                <circle cx="50" cy="45" r="15" fill="none" stroke="white" stroke-width="2" stroke-dasharray="25 10" />
+            </svg>
+            <span>Namaz Vakti Pro</span>
         </div>
 
         <div class="nav-right">
@@ -90,7 +98,7 @@
                     <i class="fa-solid fa-quran"></i>
                 </div>
                 <h3 data-i18n="dailyInfoTitle">Günün Ayeti</h3>
-                 
+
             </div>
 
             <blockquote class="verse-text" id="infoText">
@@ -200,6 +208,17 @@
             </div>
 
         </div>
+        <section class="friday-messages-section" id="cuma-mesajlari">
+            <div class="section-header">
+                <h2>En Güzel Cuma Mesajları 2026</h2>
+                <p class="section-subtitle">Bu manevi güzelliği sevdiklerinizle paylaşın.</p>
+            </div>
+
+            <div class="slider-wrapper">
+                <div class="friday-slider" id="fridayMessagesContainer">
+                </div>
+            </div>
+        </section>
     </div>
     <div class="container">
 
@@ -247,6 +266,4 @@
     <script src="script.js"></script>
 </body>
 
-
 </html>
-
