--- a/index.html
+++ b/index.html
@@ -2,28 +2,159 @@
 <html lang="tr">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- PRIMARY SEO -->
+    <title>Namaz Vakitleri 2026 | Ezan Saatleri | Cuma Mesajları | İmsak | Kıble Bulucu | Tüm İller</title>
 
-        <title>Namaz Vakitleri 2026 | Ezan Saatleri ve Kıble Bulucu</title>
-        <meta name="description"
-            content="2026 yılı için Diyanet uyumlu il il namaz vakitleri, haftalık ve aylık ezan saatleri. Kıble yönü bulma ve dini günler listesi.">
-        <meta name="keywords"
-            content="namaz vakitleri, ezan saatleri, istanbul namaz vakti, kıble bulucu, 2026 dini günler, imsakiye 2026">
-        <meta name="author" content="Namaz Vakti Pro">
+    <meta name="description" content="
+    Türkiye ve tüm iller için en doğru, güncel ve Diyanet uyumlu namaz vakitleri 2026.
+    Ezan saatleri, imsak vakti, sabah namazı saati, öğle namazı vakti, ikindi namazı vakti,
+    akşam ezanı saati, yatsı namazı vakti, cuma vakti, cuma saati, cuma namazı vakti,
+    ibadet saatleri, dini günler, kandiller, cuma mesajları, resimli cuma mesajları,
+    hayırlı cumalar mesajları, kıble bulucu ve ibadet rehberi.">
 
-        <meta property="og:title" content="Namaz Vakitleri 2026 - Tüm İller">
-        <meta property="og:description" content="Diyanet uyumlu güncel namaz vakitleri ve kıble yönü.">
-        <meta property="og:type" content="website">
-        <meta property="og:description" content="İl il güncel namaz vakitlerini takip edin, kıble yönünüzü bulun.">
-        <meta property="og:image" content="https://ezanzamani.com/preview-image.jpg">
-        <meta property="og:url" content="https:///ezanzamani.com">
+    <meta name="keywords" content="
+    namaz vakitleri,
+    namaz vakti,
+    ezan saatleri,
+    ezan saati,
+    ezan vakti,
+    imsak vakti,
+    imsak saati,
+    sabah namazı vakti,
+    sabah namazı saati,
+    öğle namazı vakti,
+    öğle namazı saati,
+    ikindi namazı vakti,
+    ikindi namazı saati,
+    akşam namazı vakti,
+    akşam ezanı saati,
+    yatsı namazı vakti,
+    yatsı saati,
+    cuma vakti,
+    cuma saati,
+    cuma namazı vakti,
+    cuma ezanı saati,
+    cuma namazı saat kaçta,
+    cuma ne zaman,
+    ibadet saatleri,
+    ibadet vakitleri,
+    namaz saatleri,
+    bugün namaz vakitleri,
+    bugün ezan saatleri,
+    İstanbul namaz vakitleri,
+    Ankara namaz vakitleri,
+    İzmir namaz vakitleri,
+    tüm iller namaz vakitleri,
+    il il namaz vakitleri,
+    şehir şehir ezan saatleri,
+    Türkiye namaz vakitleri,
+    Türkiye ezan saatleri,
+    diyanet namaz vakitleri,
+    diyanet ezan saatleri,
+    en doğru namaz vakti,
+    canlı namaz vakitleri,
+    anlık ezan saatleri,
+    kalan süre namaz,
+    sonraki namaz vakti,
+    ezana ne kadar kaldı,
+    ezan geri sayım,
+    ibadet vakti,
+    dini saatler,
+    dini vakitler,
+    kıble bulucu,
+    kıble yönü,
+    kıble nerede,
+    kıble yönü bul,
+    kıble pusulası,
+    cuma mesajları,
+    resimli cuma mesajları,
+    en güzel cuma mesajları,
+    yeni cuma mesajları,
+    hayırlı cumalar mesajları,
+    anlamlı cuma mesajları,
+    kısa cuma mesajları,
+    uzun cuma mesajları,
+    kandil günleri,
+    dini günler 2026,
+    kandil tarihleri,
+    dini günler listesi,
+    ibadet rehberi,
+    hac,
+    umre,
+    oruç vakitleri,
+    sahur vakti,
+    iftar vakti,
+    iftar saati,
+    sahur saati,
+    ramazan vakitleri,
+    ramazan imsakiyesi,
+    ezan ne zaman,
+    namaz ne zaman,
+    ezan saat kaçta,
+    ibadet zamanı,
+    ibadet uygulaması,
+    namaz uygulaması,
+    ezan uygulaması,
+    islamic prayer times,
+    prayer times turkey,
+    adhan times,
+    salah times,
+    islam prayer time
+    ">
 
-        <link rel="stylesheet" href="style.css">
-    </head>
+    <meta name="author" content="Namaz Vakti Pro">
+    <meta name="robots" content="index, follow">
+    <meta name="revisit-after" content="1 days">
+    <meta name="language" content="Turkish">
+    <meta name="distribution" content="global">
+    <meta name="rating" content="general">
+
+    <!-- GOOGLE -->
+    <meta name="googlebot" content="index, follow, max-image-preview:large">
+    <meta name="google" content="notranslate">
+
+    <!-- OPEN GRAPH (WHATSAPP, INSTAGRAM, DISCORD) -->
+    <meta property="og:title" content="Namaz Vakitleri 2026 | Ezan Saatleri | Cuma Mesajları">
+    <meta property="og:description"
+        content="İl il güncel namaz vakitleri, ezan saatleri, cuma mesajları ve kıble bulucu.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ezanzamani.com">
+    <meta property="og:image" content="https://ezanzamani.com/preview-image.jpg">
+    <meta property="og:locale" content="tr_TR">
+
+    <!-- TWITTER -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Namaz Vakitleri 2026 | Ezan Saatleri">
+    <meta name="twitter:description" content="Türkiye için güncel ezan saatleri ve namaz vakitleri.">
+    <meta name="twitter:image" content="https://ezanzamani.com/preview-image.jpg">
+
+    <!-- CANONICAL -->
+    <link rel="canonical" href="https://ezanzamani.com">
+
+    <!-- FAVICON -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css">
+
+    <!-- STRUCTURED DATA (GOOGLE SEO BOOST) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Namaz Vakti Pro",
+      "url": "https://ezanzamani.com",
+      "description": "Türkiye için güncel namaz vakitleri, ezan saatleri ve ibadet vakitleri.",
+      "inLanguage": "tr"
+    }
+    </script>
+
 </head>
+
+
 
 <body>
 
@@ -222,6 +353,12 @@
     </div>
     <div class="container">
 
+        <div class="seo-text-content">
+            <p>2026 yılına özel, en yeni ve <strong>resimli cuma mesajları</strong> ile sevdiklerinizin cumasını tebrik
+                edin. Gül ve cami temalı görsellerimizle hazırladığımız <strong>hayırlı cumalar mesajları</strong>,
+                WhatsApp ve sosyal medya paylaşımları için optimize edilmiştir. Manevi huzur dolu bu günde, en güzel
+                duaları ve cuma tebriklerini tek tıkla paylaşabilirsiniz.</p>
+        </div>
     </div>
     <footer class="modern-footer">
         <div class="footer-silhouette"></div>
