--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="tr">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property="og:title" content="Namaz Vakitleri - Cuma Mesajları">
+    <meta property="og:description" content="Günlük namaz vakitleri ve resimli cuma mesajları">
+    <meta property="og:url" content="https://semihh19.github.io/ezanvakti/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://semihh19.github.io/ezanvakti/cuma1.jpg">
 
     <!-- PRIMARY SEO -->
     <title>Namaz Vakitleri 2026 | Ezan Saatleri | Cuma Mesajları | İmsak | Kıble Bulucu | Tüm İller</title>
