--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     islam prayer time
     ">
 
-    <meta name="author" content="Namaz Vakti Pro">
+    <meta name="author" content="Ezan Zamanı">
     <meta name="robots" content="index, follow">
     <meta name="revisit-after" content="1 days">
     <meta name="language" content="Turkish">
@@ -152,7 +152,7 @@
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
-      "name": "Namaz Vakti Pro",
+      "name": "Ezan Zamanı",
       "url": "https://ezanzamani.com",
       "description": "Türkiye için güncel namaz vakitleri, ezan saatleri ve ibadet vakitleri.",
       "inLanguage": "tr"
@@ -176,17 +176,13 @@
                 <path d="M50 20 L50 40 M40 30 L60 30" stroke="white" stroke-width="2" />
                 <circle cx="50" cy="45" r="15" fill="none" stroke="white" stroke-width="2" stroke-dasharray="25 10" />
             </svg>
-            <span>Namaz Vakti Pro</span>
+            <span>Ezan Zamanı</span>
         </div>
 
         <div class="nav-right">
 
             <!-- TAB LİNKLER -->
-            <ul class="nav-links">
-                <li><a href="#main-container" onclick="switchTab('haftalik')">Haftalık</a></li>
-                <li><a href="#main-container" onclick="switchTab('aylik')">Aylık</a></li>
-                <li><a href="#main-container" onclick="switchTab('diniGunler')">Dini Günler</a></li>
-            </ul>
+
 
             <div class="nav-buttons">
 
@@ -281,6 +277,22 @@
             </div>
 
             <div class="dashboard-clocks">
+                <div class="ramadan-info">
+                    <div class="clock-box">
+                        <i class="fa-solid fa-moon"></i>
+                        <div class="info-content">
+                            <span class="label">Sahur (İmsak)</span>
+                            <span id="sahurTime" class="time">--:--</span>
+                        </div>
+                    </div>
+                    <div class="clock-box">
+                        <i class="fa-solid fa-sun"></i>
+                        <div class="info-content">
+                            <span class="label">İftar (Akşam)</span>
+                            <span id="iftarTime" class="time">--:--</span>
+                        </div>
+                    </div>
+                </div>
                 <div class="clock-box">
                     <span class="clock-label" id="nextPrayerLabel">SIRADAKİ VAKTE KALAN SÜRE</span>
                     <div class="clock-time" id="countdown">00:00:00</div>
@@ -422,7 +434,7 @@
             <div class="footer-section">
                 <h4>Hakkımızda</h4>
                 <p style="font-size: 0.8rem; color: #bdc3c7;">
-                    Namaz Vakti Pro, 2026 yılı için Diyanet İşleri Başkanlığı verileriyle %100 uyumlu ezan saatlerini
+                    Ezan Zamanı, 2026 yılı için Diyanet İşleri Başkanlığı verileriyle %100 uyumlu ezan saatlerini
                     sunar.
                     Amacımız, kullanıcıların ibadet vakitlerini en doğru ve hızlı şekilde takip etmesini sağlamaktır.
                 </p>
@@ -453,7 +465,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            &copy; 2026 Namaz Vakti Pro - <span data-i18n="allRightsReserved">Tüm Hakları Saklıdır.</span>
+            &copy; 2026 Ezan Zamanı- <span data-i18n="allRightsReserved">Tüm Hakları Saklıdır.</span>
         </div>
     </footer>
     <script src="script.js"></script>
